--- a/formular.html
+++ b/formular.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
-<body>
-
-<!DOCTYPE html>
 <html>
 <body>
     
 
-<form action="/action_page.php">
+<form action="/action_page.php" method="get">
     <fieldset>
        <legend>Logga in:</legend>
   <label for="username">Username:</label><br>
@@ -33,7 +28,7 @@
     
     <h2>Pre-selected Option</h2>
 
-<form action="/action_page.php">
+<form action="/action_page.php" method="get">
   <label for="cars">Välj din skola:</label>
   <select id="cars" name="cars">
     <option value="volvo" selected>Kungsmad</option>
